loaded Trees and Crops Sprites